fix spacing

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -81,7 +81,6 @@ h3, h4, h5, h6 {
 a {
   color:#267CB9;
   text-decoration:none;
-  text-align:center;
 }
 
 a:hover, a:focus {
